--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,11 +25,15 @@
     "@react-google-maps/api": "^2.20.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.3",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-to-print": "^3.1.0",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
